# math-lib

./: CMakeLists.txt
include/: Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h  library.h
src/: CMakeLists.txt  Matrix3.cpp  Matrix4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  library.cpp
test/: CMakeLists.txt  test.cpp
